IPython for unix system advanced

--- a/python/ipython_for_unix_system/ipython_para_sistemas_unix.ipynb
+++ b/python/ipython_for_unix_system/ipython_para_sistemas_unix.ipynb
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,27 +960,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'str(1)'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "format_str(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,18 +1009,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\t Texto sin espacios \t\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spacious_string = \"\\n\\t Texto sin espacios \\t\\r\"\n",
     "print(spacious_string)"
@@ -1039,20 +1019,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Texto sin espacios \t\r\n",
-      "\n",
-      "\t Texto sin espacios\n",
-      "Texto sin espacios\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(spacious_string.lstrip()) # Elimina los espacios al principio de la cadena (preserva el \\t\\r)\n",
     "print(spacious_string.rstrip()) # Elimina los espacios al final de la cadena (preserva el \\n\\t)\n",
@@ -1068,20 +1037,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'some_tag>'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "##### xml_tag = \"<some_tag>\"\n",
     "xml_tag.lstrip(\"<\")"
@@ -1089,87 +1047,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<some_tag>'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "xml_tag.lstrip(\">\") # Como al principio de la cadena no existe ese caracter, el resutado es el mismo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<some_tag'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "xml_tag.rstrip(\">\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'some_tag'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "xml_tag.strip(\"<\").strip(\">\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'some_tag'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "xml_tag.strip(\"<>\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1178,20 +1092,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'gt lt str'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gt_it_str.strip(\"<>\")"
    ]
@@ -1205,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1214,20 +1117,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'hola'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "foo_str.strip(\"<foo>\")"
    ]
@@ -1243,20 +1135,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "COINCIDENCIAS->  palabras\n",
-      "COINCIDENCIAS->  corchetes\n",
-      "COINCIDENCIAS->  ejemplo\n",
-      "COINCIDENCIAS->  expresión regular\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "\n",
@@ -1270,20 +1151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['palabras', 'corchetes', 'ejemplo', 'expresión regular']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "re.findall(re_string, some_string)"
    ]
@@ -1299,20 +1169,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "COINCIDENCIAS->  palabras\n",
-      "COINCIDENCIAS->  corchetes\n",
-      "COINCIDENCIAS->  ejemplo\n",
-      "COINCIDENCIAS->  expresión regular\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "\n",
@@ -1341,20 +1200,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import subprocess\n",
     "\n",
@@ -1393,23 +1241,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Filesystem      Size   Used  Avail Capacity iused               ifree %iused  Mounted on\n",
-      "/dev/disk1s1   113Gi   83Gi   27Gi    76% 1397313 9223372036853378494    0%   /\n",
-      "devfs          190Ki  190Ki    0Bi   100%     658                   0  100%   /dev\n",
-      "/dev/disk1s4   113Gi  2.0Gi   27Gi     7%       3 9223372036854775804    0%   /private/var/vm\n",
-      "map -hosts       0Bi    0Bi    0Bi   100%       0                   0  100%   /net\n",
-      "map auto_home    0Bi    0Bi    0Bi   100%       0                   0  100%   /home\n",
-      "/dev/disk2s1    60Gi   16Gi   44Gi    27%  127071              361625   26%   /Volumes/ext.DISK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "p = subprocess.Popen('df -h', shell=True, stdout=subprocess.PIPE)\n",
     "out = p.stdout.readlines()\n",
@@ -1429,21 +1263,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "test_var_args() got an unexpected keyword argument 'name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-46-f5ed925f94e7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0;32mprint\u001b[0m \u001b[0;34m\"another arg through *argv :\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mtest_var_args\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'yasoob'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlanguage\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'python'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0meat\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'eggs'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'test'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: test_var_args() got an unexpected keyword argument 'name'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def test_var_args(f_arg, *argv):\n",
     "    print \"first normal arg:\", f_arg\n",
@@ -1455,19 +1277,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "arg1 == 5\n",
-      "arg2 == two\n",
-      "arg3 == 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def test_kwargs(**kwargs):\n",
     "    if kwargs is not None:\n",
@@ -1481,19 +1293,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "arg1 == 3\n",
-      "arg2 == two\n",
-      "arg3 == 5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def test_kwargs(**kwargs):\n",
     "    if kwargs is not None:\n",
@@ -1512,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1532,20 +1334,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(None, None)"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "p = subprocess.Popen(\"wc -c\", shell=True, stdin=subprocess.PIPE)\n",
     "p.communicate(\"holaquetal\")"
@@ -1560,20 +1351,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(None, None)"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open('text.txt', 'w') as file:\n",
     "    file.write(\"holaquetal\")\n",
@@ -1607,17 +1387,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "p1 = subprocess.Popen('cat /etc/passwd', shell=True, stdout=subprocess.PIPE)\n",
     "p2 = subprocess.Popen('grep 0:0', shell=True, stdin=p1.stdout, stdout=subprocess.PIPE)\n",
@@ -1633,11 +1405,143 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hilos de ejecución\n",
+    "\n",
+    "Los hilos de ejecución se ejecutan dentro del mismo proceso y comparten estado y memoria a diferencia de los procesos. Como ventaja es que puede crear una estructura de datos a la que pueden acceder todos los hilos de ejecución sin crear un mecanismo de comunicación entre aplicaciones.\n",
+    "\n",
+    "Como desventaja, a menudo un programa que sea complejo es dificil de depurar si se encuentra un problema en la ejecución y es necesario añadir un seguimiento (y aún así es complejo).\n",
+    "\n",
+    "Veamos un ejemplo sencillo de implementación de hilos. En el script se hereda de la clase `threading.Thread`, se establece una variable `count` y después se anula el método ejecutar para, por último, lanzar cinco hilos de ejecución que explícitamente imprimen su número. El ejemplo es muy simple y con mal diseño ya que se está utilizando una variable global y permite que los hilos puedan compartir estado. Lo ideal sería utilizar colas con hilos de ejecución ya que se ocupan de la complejidad de tratar con estados compartidos (condicionamiento de carrera). De hecho si se ejecuta varias veces puede verse como en algunas ocasiones no se listan los 5 hilos y algunos comparten el valor de la variable `count`. Esto puede ser un problema cuando se quiere trazar."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Mal diseño por estado compartido:\n",
+    "import threading\n",
+    "import time\n",
+    "\n",
+    "count = 1\n",
+    "class MyThread(threading.Thread):\n",
+    "    def run(self):\n",
+    "        global count\n",
+    "        print(\"Thread # %s \" % count)\n",
+    "        count += 1\n",
+    "        time.sleep(2)\n",
+    "        print(\"Terminado.\\r\")\n",
+    "        \n",
+    "for i in range(5):\n",
+    "    MyThread().start()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nótese como las primeras trazas (Thread n) se lanzan a la vez y pasados dos segundos devuelven el resultado todas a la vez. El método `run` que se ha implementado, si no se hubieran usado hilos iría de manera secuencial.\n",
+    "\n",
+    "Veamos ahora un ejemplo utilizando una cola (Queue) y esperar respuetas de ping."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from threading import Thread\n",
+    "import subprocess\n",
+    "from Queue import Queue\n",
+    "\n",
+    "num_threads = 3\n",
+    "queue = Queue()\n",
+    "ips = ['10.0.1.1', '10.0.1.3', '10.0.1.11', '10.0.1.51']\n",
+    "\n",
+    "def pinger(i, q):\n",
+    "    '''Ping a una subred'''\n",
+    "    \n",
+    "    while True:\n",
+    "        ip = q.get()\n",
+    "        print(\"Thread # %s: Pinging %s\\n\" % (i, ip))\n",
+    "        ret = subprocess.call('ping -c 1 %s' %ip,\n",
+    "                              shell = True,\n",
+    "                              stdout = open('/dev/null', 'w'),\n",
+    "                             stderr=subprocess.STDOUT)\n",
+    "        if ret == 0:\n",
+    "            print(\"%s is alive\" %ip)\n",
+    "        else:\n",
+    "            print(\"%s: no responde\" % ip)\n",
+    "        q.task_done()\n",
+    "        \n",
+    "for i in range(num_threads):\n",
+    "    \n",
+    "    worker = Thread(target=pinger, args=(i, queue))\n",
+    "    worker.setDaemon(True)\n",
+    "    worker.start()\n",
+    "\n",
+    "for ip in ips:\n",
+    "    queue.put(ip)\n",
+    "    \n",
+    "print(\"Hilo principal esperando ...\")\n",
+    "queue.join()\n",
+    "print(\"Hecho!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utilizar hilos de ejecución para desarrollar un barrido ping en una subred es un buen ejemplo. Un programa Python sin hilos de ejecución tardaría $N*(tiempo medio de respuesta de ping)$ en resolver todas las IPs. Existen dos estados: estado respuesta y estado *timeout*. Una red típica sería una mezcla entre ambas. \n",
+    "\n",
+    "Esto significa que una red de clase C (254 direcciones) podría llevar unos $3\\ segundos$ utilizando hilos de ejecución. Sin hilos podría llevar unos $12.7\\ minutos$.\n",
+    "\n",
+    "El módulo `Queue` empleado facilita al programador la necesidad de controlar el condicionamiento de carrera y realiza los `mutex` de manera interna, protegiendo las variables para no tener dos accesos en el mismo instante. Queue proporciona a un grupo de \"trabajadores\" algo que hacer y cuando la cola está vacía se ha acabado el trabajo.\n",
+    "\n",
+    "En el código anterior, la parte clave de la cola es el método `join()`. Es una forma de controlar que el hilo de ejecución principal no abandone el programa antes que los otros hilos de ejecución tengan la posibilidad de terminar de trabajar en elementos de una cola. Si comentamos esa línea, el programa principal termina antes que los hilos de ejecución siendo esto un verdadero problema.\n",
+    "\n",
+    "Destacable también el método `q.task_done()` al final del método `pinger()` que le dice a la cola que se ha completado la tarea y, por tanto, lo libera de la cola. Así mismo `q.get()` pide a la cola una tarea que realizar.\n",
+    "\n",
+    "Es importante también el uso de `setDaemon(True)` antes de invocar al método `start()` para que el programa NO se cuelgue indefinidamente ya que un programa solo saldrá o terminará si se están ejecutando hilos de ejecución *daemon*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Programar procesos en Python\n",
+    "\n",
+    "Una manera que tiene un administrador de sistemas de enviar un reporte diario sobre el uso de disco (por ejemplo) es programar con la herramienta de UNIX `cron` el envio automático de un correo del siguiente modo:\n",
+    "\n",
+    "```bash\n",
+    "59 23 * * * df -h | mail -s \"Reporte diario\\n\" correo@dominio.com\n",
+    "```\n",
+    "\n",
+    "La manera en la que se podría hacer con Python es crear un script y que sea lanzado por la herramienta Cron. Un ejemplo de un script de correo sería:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import smtplib\n",
+    "import subprocess\n",
+    "import string\n",
+    "\n",
+    "p = subprocess.Popen(\"df -h\", shell=True, stdout=subprocess.PIPE)\n",
+    "MSG = p.stdout.read()\n",
+    "FROM = \"sysadmin@dominio.com\"\n",
+    "TO = \"correo@dominio.com\"\n",
+    "SUBJECT = \"Informe diario\"\n",
+    "msg = "
+   ]
   }
  ],
  "metadata": {
