--- a/python/ipython_for_unix_system/ipython_para_sistemas_unix.ipynb
+++ b/python/ipython_for_unix_system/ipython_para_sistemas_unix.ipynb
@@ -1540,8 +1540,132 @@
     "FROM = \"sysadmin@dominio.com\"\n",
     "TO = \"correo@dominio.com\"\n",
     "SUBJECT = \"Informe diario\"\n",
-    "msg = "
+    "msg = string.join((\"From: %s\" % FROM,\n",
+    "                  \"To: %s\" % TO,\n",
+    "                  \"Subject: %s\" % SUBJECT,\n",
+    "                  \"\",\n",
+    "                  MSG), \"\\r\\n\")\n",
+    "server = smtplib.SMTP('localhost')\n",
+    "server.sendmail(FROM, TO, msg)\n",
+    "server.quit()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### daemonizador\n",
+    "\n",
+    "Las tres características que tienen que reunirse para diferenciar un daemon de un proceso en segundo plano son:\n",
+    "- Ejecutarse en segundo plano.\n",
+    "- Estar desplazado del proceso que lo inició.\n",
+    "- No tener terminal de control.\n",
+    "\n",
+    "Un proceso en segundo plano solo tendrá una de las tres características mencionadas.\n",
+    "\n",
+    "La función `daemonize()` hará que el programa se convierta en un *daemon* en el sentido de las características anteriores. Lo primero que hace este código es crear un `fork()` para crear una copia del proceso que se ejecuta donde la copia se considera el proceso \"hijo\" y el original se considera como el proceso \"padre\". Cuando el proceso hijo se bifurca, el padre puede terminar. También se comprueba qué `PID` está detrás de la bifurcación. Si el `PID` es positivo significa que estamos en el proceso padre. Esta es una característica cuando se invoca a un proceso hijo, que el `PID` es negativo. Después de completar la llamada a `os.fork()` habrá dos copias del mismo proceso ejecutándose. Ambos luego comprueban el código de retorno de la llamada `fork()` que devuelve 0 en el hijo y el ID del proceso en el padre. **Cualquiera que sea el proceso que tiene un código de retorno `!= 0` que solamente será del padre, termina**. Si ocurre un problema en este punto, se eleva una excepción y el proceso termina. Si el script se lanza desde una Bash se verá que se devuelve el *command prompt*.\n",
+    "\n",
+    "Lo siguiente que hace el proceso es cambiar el directorio a `/`, establecer su `umask` en 0 y crear una nueva sesión.  Cambiar el directorio sitúa al proceso en un directorio que siempre terminará. La última acción (`os.setsid()`) es menos familiar pero realiza, en primer lugar, que el proceso se convierta en líder de sesión de una nuev sesión. A continuación hace que el proceso se convierta en líder de grupo del proceso de un nuevo grupo de proceso. Por último hace que el proceso no tenga terminal de control, lo que significa que el proceso no puede ser víctima de acciones involuntarias de control de trabajo desde algún terminal. Esto es útil para tener un proceso prolongado e ininterrumpido como un daemon."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys, os\n",
+    "\n",
+    "def daemonize(stdin='/dev/null', stdout='/dev/null', stderr='/dev/null'):\n",
+    "    # Realizar primero fork.\n",
+    "    try:\n",
+    "        pid = os.fork()\n",
+    "        if pid > 0:\n",
+    "            sys.exit(0)\n",
+    "    except OSError, e:\n",
+    "        sys.stderr.write(\"fork #1 failed: (%d) %s\\n\" % (e.errno, e.strerror))\n",
+    "    # Separarde entorno padre.\n",
+    "    os.chdir(\"/\")\n",
+    "    os.umask(0)\n",
+    "    os.setsid()\n",
+    "    # Realizar segundo fork.\n",
+    "    try:\n",
+    "        pid = os.fork()\n",
+    "        if pid > 0:\n",
+    "            sys.exit(0)\n",
+    "    except OSError, e:\n",
+    "        sys.stderr.write(\"fork #2 failed: (%d) %s\\n\" % (e.errno, e.strerror))\n",
+    "    sys.exit(1)\n",
+    "        \n",
+    "    # El proceso ahora está daemonizado\n",
+    "    for f in sys.stdout, sys.stderr: f.flush()\n",
+    "\n",
+    "    si = file(stdin, 'r')\n",
+    "    so = file(stdout, 'a+')\n",
+    "    se = file(stderr, 'a+', 0)\n",
+    "\n",
+    "    os.dup2(si.fileno( ), sys.stdin.fileno( ))\n",
+    "    os.dup2(so.fileno( ), sys.stdout.fileno( ))\n",
+    "    os.dup2(se.fileno( ), sys.stderr.fileno( ))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Si guardamos este código en un archivo llamado `daemonize.py` tenemos la estructura preparada para crear un programa que haga uso de él como puede ser el siguiente:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SystemExit",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#from daemonize import daemonize\n",
+    "import time\n",
+    "import sys\n",
+    "\n",
+    "def mod_5_watcher():\n",
+    "    start_time = time.time()\n",
+    "    end_time = start_time + 20\n",
+    "    \n",
+    "    while time.time() < end_time:\n",
+    "        now = time.time()\n",
+    "        if int(now) % 5 == 0:\n",
+    "            sys.stderr.write('Mod 5 at %s\\n' % now)\n",
+    "        else:\n",
+    "            sys.stdout.write('No mod 5 at %s\\n' % now)\n",
+    "        time.slee(1)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    daemonize(stdout='/tmp/stdout.log', stderr='/tmp/stderr.log')\n",
+    "    mod_5_watcher()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El script primero *daemoniza* y especifica que se debería utilizar `/tmp/stdout.log` para la salida estandar y `/tmp/stderr.log` para error estándar. Luego se observa el tiempo durante los siguientes 20 segundos, durmiendo un segundo entre comprobaciones de tiempo. Si el tiempo es divisible entre 5, se escribe el error en estándar.Puesto que el proceso utiliza `/tmp/stdout.log` para salida estándar y `/tmp/stderr.log` para error estándar se debería poder ver los resultados en esos archivos después de ejecutar el ejemplo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
