--- a/python/data_science/numpy.ipynb
+++ b/python/data_science/numpy.ipynb
@@ -8,12 +8,148 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook will show examples of use and operations with the Numpy library. Part of the information shown in the booklet has been extracted from the book: \"Python Data Science HandBook (2017)\" [online version](https://jakevdp.github.io/PythonDataScienceHandbook/).\n",
+    "\n",
+    "*The text is released under the CC-BY-NC-ND license, and code is released under the MIT license. If you find this content useful, please consider supporting the work by [buying the book!](http://shop.oreilly.com/product/0636920034919.do).*\n",
+    "\n",
+    "Table of contents:\n",
+    "\n",
+    "* [Creating Arrays from Scratch](#Creating-Arrays-from-Scratch)\n",
+    "* [Data Manipulation using NumPy](#Data-Manipulation-using-NumPy)\n",
+    "  * [Attributes](#Attributes)\n",
+    "  * [Array Indexing](#Array-Indexing.-Accesing-to-single-elements)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating Arrays from Scratch\n",
+    "\n",
+    "Especially for larger arrays, it is **more efficient** to create arrays from scratch **using routines** built into NumPy. Here are several examples. We'll start with the standard NumPy import, under the alias np:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a length-10 integer array filled with zeros\n",
+    "np.zeros(10, dtype=int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a 3x5 floating-point array filled with ones\n",
+    "np.ones((3, 5), dtype=float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3.14, 3.14, 3.14, 3.14, 3.14],\n",
+       "       [3.14, 3.14, 3.14, 3.14, 3.14],\n",
+       "       [3.14, 3.14, 3.14, 3.14, 3.14]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a 3x5 array filled with 3.14\n",
+    "np.full((3, 5), 3.14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  2,  4,  6,  8, 10, 12, 14, 16, 18])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an array filled with a linear sequence\n",
+    "# Starting at 0, ending at 20, stepping by 2\n",
+    "# (this is similar to the built-in range() function)\n",
+    "np.arange(0, 20, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.  , 0.25, 0.5 , 0.75, 1.  ])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an array of five values evenly spaced between 0 and 1\n",
+    "np.linspace(0, 1, 5)"
    ]
   },
   {
@@ -34,6 +170,354 @@
     "a = np.array([[1., 2.],[4., 5.]])\n",
     "print(a)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.74778554, 0.97596455, 0.25233894],\n",
+       "       [0.75400273, 0.59962465, 0.35108106],\n",
+       "       [0.13527468, 0.98132142, 0.04422794]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a 3x3 array of uniformly distributed\n",
+    "# random values between 0 and 1\n",
+    "np.random.random((3, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.47480562, -0.89955885,  1.29303459],\n",
+       "       [ 1.04271041,  0.46552169, -0.60269015],\n",
+       "       [ 0.20269149, -0.46546784, -0.19825129]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a 3x3 array of normally distributed random values\n",
+    "# with mean 0 and standard deviation 1\n",
+    "np.random.normal(0, 1, (3, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5, 0, 6],\n",
+       "       [2, 3, 7],\n",
+       "       [6, 5, 1]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a 3x3 array of random integers in the interval [0, 10)\n",
+    "np.random.randint(0, 10, (3, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a 3x3 identity matrix\n",
+    "np.eye(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1.])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an uninitialized array of three integers\n",
+    "# The values will be whatever happens to already exist at that memory location\n",
+    "np.empty(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Manipulation using NumPy\n",
+    "\n",
+    "These are the categories that will be seen:\n",
+    "\n",
+    "- **Attributes of arrays**: Determining the size, shape, memory consumption, and data types of arrays\n",
+    "- **Indexing of arrays**: Getting and setting the value of individual array elements\n",
+    "- **Slicing of arrays**: Getting and setting smaller subarrays within a larger array\n",
+    "- **Reshaping of arrays**: Changing the shape of a given array\n",
+    "- **Joining and splitting of arrays**: Combining multiple arrays into one, and splitting one array into many"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Attributes\n",
+    "\n",
+    "Each array has the following attributes. Another useful attribute is the `dtype`, the data type of the array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x3 ndim : 3\n",
+      "x3 shape: (3, 4, 5)\n",
+      "x3 size : 60\n",
+      "x3 dtype: int64\n",
+      "itemsize: 8 bytes\n",
+      "nbytes  : 480 bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.random.seed(0)  # seed for reproducibility\n",
+    "\n",
+    "x3 = np.random.randint(10, size=(3, 4, 5))  # Three-dimensional array\n",
+    "\n",
+    "print(\"x3 ndim :\", x3.ndim)\n",
+    "print(\"x3 shape:\", x3.shape)\n",
+    "print(\"x3 size :\", x3.size)\n",
+    "print(\"x3 dtype:\", x3.dtype)\n",
+    "print(\"itemsize:\", x3.itemsize, \"bytes\")\n",
+    "print(\"nbytes  :\", x3.nbytes, \"bytes\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In general, we expect that nbytes is equal to itemsize times size (`x3_size * 8 bytes/per = 480 bytes`)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Array Indexing. Accesing to single elements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8 1 1 7 9 9]\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "x1 = np.random.randint(10, size=6)  # One-dimensional array\n",
+    "print(x1)\n",
+    "print(x1[0])\n",
+    "print(x1[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3 6 7 2]\n",
+      " [0 3 5 9]\n",
+      " [4 4 6 4]]\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "x2 = np.random.randint(10, size=(3, 4))  # Two-dimensional array\n",
+    "print(x2)\n",
+    "print(x2[0, 0])\n",
+    "print(x2[2, -1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Values can also be modified using any of the above index notation. Keep in mind that, unlike Python lists, NumPy arrays have a **fixed type**. This means, for example, that if you attempt to insert a floating-point value to an integer array, the value will be silently **truncated**. Don't be caught unaware by this behavior!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[12,  6,  7,  2],\n",
+       "       [ 0,  3,  5,  9],\n",
+       "       [ 4,  4,  6,  4]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x2[0, 0] = 12\n",
+    "x2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 6, 7, 2],\n",
+       "       [0, 3, 5, 9],\n",
+       "       [4, 4, 6, 4]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x2[0, 0] = 3.14159  # this will be truncated!\n",
+    "x2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Array Slicing: Accessing Subarrays."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -63,11 +547,18 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Notes:\n",
+    "\n",
+    "For Table Of Contents installing, type the following commands:\n",
+    "```bash\n",
+    "jupyter nbextension install --user https://rawgithub.com/minrk/ipython_extensions/master/nbextensions/toc.js\n",
+    "curl -L https://rawgithub.com/minrk/ipython_extensions/master/nbextensions/toc.css > $(jupyter --data-dir)/nbextensions/toc.css\n",
+    "jupyter nbextension enable toc\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
