First simple version done

--- a/python/linked_list/linked_list.ipynb
+++ b/python/linked_list/linked_list.ipynb
@@ -6,48 +6,91 @@
    "source": [
     "# Python Linked List\n",
     "\n",
-    "## Clase Lista enlazada"
+    "## Linked list Class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
     "class LinkedList:\n",
     "    \n",
     "    def __init__(self):\n",
-    "        self.p_start = None\n",
-    "        self.p_end = None\n",
+    "        self.head = None\n",
+    "        self.end = None\n",
     "        self.list_size = 0\n",
     "    \n",
-    "    \n",
     "    def __str__(self):\n",
-    "        return hex(id(self.p_start))\n",
+    "        return hex(id(self.head))\n",
     "\n",
-    "    \n",
-    "    def print_list(self):\n",
+    "    def print_simple_list(self):\n",
     "        \n",
-    "        node = Node(hex(id(self.p_start)))\n",
-    "\n",
-    "        while node.next != None:\n",
+    "        node = self.head\n",
+    "        \n",
+    "        if self.list_size == 0:\n",
+    "            print(\"Empty list!!\")\n",
+    "        elif self.list_size == 1:\n",
     "            print(node.value)\n",
+    "        else:\n",
+    "            while node.next != None:\n",
+    "                print('{} -> '.format(node.value), end='')\n",
+    "                node = node.next\n",
+    "            else:\n",
+    "                print(node.value)\n",
     "    \n",
+    "    def print_detailed_list(self):\n",
+    "        \n",
+    "        node = self.head\n",
+    "        \n",
+    "        if self.list_size == 0:\n",
+    "            print(\"Empty list!!\")\n",
+    "        elif self.list_size == 1:\n",
+    "            print(node.value)\n",
+    "        else:\n",
+    "            while node.next != None:\n",
+    "                print('current dir: {} | value: {} | next: {}\\n'.format(hex(id(node)), node.value, hex(id(node.next))), end='')\n",
+    "                node = node.next\n",
+    "            else:\n",
+    "                print('current dir: {} | value: {} | next: {}\\n'.format(hex(id(node)), node.value, node.next), end='')\n",
     "    \n",
-    "    def insert_begin(self, value):\n",
+    "    def insert_begin(self, int=value):\n",
     "        \n",
     "        node = Node(value)\n",
     "        \n",
     "        if self.list_size == 0:\n",
-    "            self.p_start = node\n",
-    "            self.p_final = node\n",
+    "            self.head = node\n",
+    "            self.end = node\n",
     "        else:\n",
-    "            node.next = self.p_start\n",
-    "            self.p_end = self.p_start\n",
-    "            self.p_start = node\n",
+    "            node.next = self.head\n",
+    "            self.head = node\n",
     "            \n",
     "        self.list_size += 1\n",
+    "        \n",
+    "    def insert_end(self, int=value):\n",
+    "        pass\n",
+    "    \n",
+    "    def insert_position(self, pos):\n",
+    "        pass\n",
+    "    \n",
+    "    def delete_begin(self, value):\n",
+    "        pass\n",
+    "    \n",
+    "    def delete_end(self, value):\n",
+    "        pass\n",
+    "    \n",
+    "    def delete_in_position(self, pos):\n",
+    "        pass\n",
     "        "
    ]
   },
@@ -55,17 +98,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Clase Nodo"
+    "## Node Class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Node:\n",
-    "    def __init__(self, value):\n",
+    "    def __init__(self, int=value):\n",
     "        self.value = value\n",
     "        self.next = None\n",
     "    \n",
@@ -82,32 +125,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0x7f9e866b0278\n"
+      "4 -> 6 -> 7 -> 5 -> 6 -> 5 -> 6 -> 10 -> 3 -> 6\n"
      ]
     }
    ],
    "source": [
     "llist = LinkedList()\n",
     "\n",
-    "llist.insert_begin(2)\n",
-    "llist.insert_begin(3)\n",
-    "\n",
-    "llist.print_list()"
+    "# Insert dummy list at the beginning\n",
+    "for i in range(10):\n",
+    "    value = random.randint(1, 10)\n",
+    "    llist.insert_begin(value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Print Simple list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 -> 6 -> 7 -> 5 -> 6 -> 5 -> 6 -> 10 -> 3 -> 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "llist.print_simple_list()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Print detailed List:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current dir: 0x7fd5b1af7e48 | value: 4 | next: 0x7fd5b1af7d68\n",
+      "current dir: 0x7fd5b1af7d68 | value: 6 | next: 0x7fd5b1af7b70\n",
+      "current dir: 0x7fd5b1af7b70 | value: 7 | next: 0x7fd5b1af7da0\n",
+      "current dir: 0x7fd5b1af7da0 | value: 5 | next: 0x7fd5b1af7cf8\n",
+      "current dir: 0x7fd5b1af7cf8 | value: 6 | next: 0x7fd5b1af79e8\n",
+      "current dir: 0x7fd5b1af79e8 | value: 5 | next: 0x7fd5b1af7f28\n",
+      "current dir: 0x7fd5b1af7f28 | value: 6 | next: 0x7fd5b1af7390\n",
+      "current dir: 0x7fd5b1af7390 | value: 10 | next: 0x7fd5b1af74e0\n",
+      "current dir: 0x7fd5b1af74e0 | value: 3 | next: 0x7fd5b1af7208\n",
+      "current dir: 0x7fd5b1af7208 | value: 6 | next: None\n"
+     ]
+    }
+   ],
+   "source": [
+    "llist.print_detailed_list()"
+   ]
   },
   {
    "cell_type": "code",
