Insert and delete in begin and end done.

--- a/python/linked_list/linked_list.ipynb
+++ b/python/linked_list/linked_list.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,8 @@
     "            else:\n",
     "                print('current dir: {} | value: {} | next: {}\\n'.format(hex(id(node)), node.value, node.next), end='')\n",
     "    \n",
-    "    def insert_begin(self, int=value):\n",
+    "    \n",
+    "    def insert_begin(self, value):\n",
     "        \n",
     "        node = Node(value)\n",
     "        \n",
@@ -77,17 +78,44 @@
     "            \n",
     "        self.list_size += 1\n",
     "        \n",
-    "    def insert_end(self, int=value):\n",
+    "        \n",
+    "    def insert_end(self, value):\n",
+    "        \n",
+    "        new_node = Node(value)\n",
+    "        \n",
+    "        self.end.next = new_node\n",
+    "        self.end = new_node\n",
+    "        new_node.next = None\n",
+    "        \n",
+    "        self.list_size += 1\n",
+    "        \n",
+    "    \n",
+    "    def insert_position(self, value, pos):\n",
     "        pass\n",
     "    \n",
-    "    def insert_position(self, pos):\n",
-    "        pass\n",
     "    \n",
-    "    def delete_begin(self, value):\n",
-    "        pass\n",
+    "    def delete_begin(self):\n",
+    "        \n",
+    "        node = self.head\n",
+    "        new_head = node.next\n",
+    "        self.head = new_head\n",
+    "        \n",
     "    \n",
-    "    def delete_end(self, value):\n",
-    "        pass\n",
+    "    def delete_end(self):\n",
+    "        \n",
+    "        node = self.head\n",
+    "        node_prev = None\n",
+    "        \n",
+    "        while node.next != None:\n",
+    "            node_prev = node\n",
+    "            node = node.next\n",
+    "        else:\n",
+    "            self.end = node_prev\n",
+    "            node_prev.next = None\n",
+    "            node = None\n",
+    "        \n",
+    "        self.list_size -= 1\n",
+    "\n",
     "    \n",
     "    def delete_in_position(self, pos):\n",
     "        pass\n",
@@ -103,12 +131,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Node:\n",
-    "    def __init__(self, int=value):\n",
+    "    def __init__(self, value):\n",
     "        self.value = value\n",
     "        self.next = None\n",
     "    \n",
@@ -125,14 +153,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 -> 6 -> 7 -> 5 -> 6 -> 5 -> 6 -> 10 -> 3 -> 6\n"
+      "8 -> 5 -> 10 -> 7 -> 6 -> 6 -> 7 -> 9 -> 1 -> 7\n"
      ]
     }
    ],
@@ -142,30 +170,25 @@
     "# Insert dummy list at the beginning\n",
     "for i in range(10):\n",
     "    value = random.randint(1, 10)\n",
-    "    llist.insert_begin(value)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Print Simple list"
+    "    llist.insert_begin(value)\n",
+    "llist.print_simple_list()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 -> 6 -> 7 -> 5 -> 6 -> 5 -> 6 -> 10 -> 3 -> 6\n"
+      "8 -> 5 -> 10 -> 7 -> 6 -> 6 -> 7 -> 9 -> 1\n"
      ]
     }
    ],
    "source": [
+    "llist.delete_end()\n",
     "llist.print_simple_list()"
    ]
   },
@@ -173,34 +196,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Print detailed List:"
+    "## Choose an option"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "current dir: 0x7fd5b1af7e48 | value: 4 | next: 0x7fd5b1af7d68\n",
-      "current dir: 0x7fd5b1af7d68 | value: 6 | next: 0x7fd5b1af7b70\n",
-      "current dir: 0x7fd5b1af7b70 | value: 7 | next: 0x7fd5b1af7da0\n",
-      "current dir: 0x7fd5b1af7da0 | value: 5 | next: 0x7fd5b1af7cf8\n",
-      "current dir: 0x7fd5b1af7cf8 | value: 6 | next: 0x7fd5b1af79e8\n",
-      "current dir: 0x7fd5b1af79e8 | value: 5 | next: 0x7fd5b1af7f28\n",
-      "current dir: 0x7fd5b1af7f28 | value: 6 | next: 0x7fd5b1af7390\n",
-      "current dir: 0x7fd5b1af7390 | value: 10 | next: 0x7fd5b1af74e0\n",
-      "current dir: 0x7fd5b1af74e0 | value: 3 | next: 0x7fd5b1af7208\n",
-      "current dir: 0x7fd5b1af7208 | value: 6 | next: None\n"
-     ]
-    }
-   ],
-   "source": [
-    "llist.print_detailed_list()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
